--- a/areaproduccion/style.css
+++ b/areaproduccion/style.css
@@ -92,12 +92,31 @@ label {
   cursor: pointer;
 }
 input:not([type="submit"]), textarea{
-  padding: 1rem;
+  padding: .7rem;
   display: block;
-  width: 100%;
+  width: 90%;
   background-color: #e1e1e1;
   margin-bottom: 2rem;
   border: none;
   border-radius: 1rem;
   font-size: medium;
+  margin: 2rem 2rem 2rem 2rem;
+  
+}
+fieldset{
+  border: medium;
+  border-style: groove;
+}
+.formulario{
+  padding: 5rem;
+}
+.formulario label{
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.formulario h2 {
+  text-align: center;
+  padding: 2rem;
+  font-weight: bold;
 }
