--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root{
+    --tabla: 'Unna', serif;
+    --titulo: 'Permanent Marker', cursive;
+    --fuenteprincipal: 'Bebas Neue', cursive;
+}
+
 html{
     font-size: 62.5%;
     box-sizing: border-box;
@@ -22,8 +28,9 @@ body{
 .logotipo h1{
     justify-content: center;
    align-items: center;
-   color: white;
-    
+   color:white;
+   font-family:var(--titulo);
+   font-size: 4rem;
 }
 .logo1{
     max-width: 15%;
@@ -46,28 +53,38 @@ body{
     text-decoration: none;
     display: flex;
     justify-content: start;
-   align-items: center;
+     align-items: center;
 }
 .nav a{
     text-decoration: none;
-    font-size: 2rem;
-    margin-right: 2rem;
+    font-size: 3rem;
     color: white;
     padding: 1rem;
+    font-family: var(--tabla);
 }
-
+.nav a:hover{
+    background-color: green;
+}
+.usuario{
+    background-color: gray;
+    text-align: center;
+}
 .usuario h3{
-    display: flex;
-    justify-content: start;
-     align-items: center;
     font-size: 1.5rem;
-    color:darkolivegreen;
+    color:white;
+    margin-right: 2rem;
+}
+.usuario i{
+    font-size: 2rem;
 }
 .usuario img{
     margin-top: 1rem;
+    border: solid;
 }
-.prueba{
-    padding: 22rem;
+.logeo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .footer{
     display: flex;
@@ -76,6 +93,10 @@ body{
     color: darkolivegreen;
     background-color:black;
     padding: 2rem;
+}
+.contenedor-tabla{
+    width: 80%;
+    margin: 0 auto;
 }
 table{
     width: 100%;
@@ -110,15 +131,20 @@ p{
     padding: 2rem;
 }
 .arriba h1{
-    margin-right: 3rem;
+    margin-right: 2rem;
+    font-family: var(--tabla);
+    font-size: 2.5rem;
 }
 .boton a{
     text-decoration: none;
-    padding: 1rem;
+    padding: 1rem 1.5rem 1rem 1.5rem;
     border: solid;
-    border-color: #14401a;;
-    color: black;
-    font-size: 1rem;
+    background-color:  #14401a;
+    border-radius: 1rem;
+    border-color: #0e1a0d;
+    color: white;
+    font-size: 1.5rem;
+    font-family: var(--tabla);
 }
 .boton a:hover{
     background-color:#09f54a;
@@ -152,6 +178,10 @@ form legend {
     display: flex;
     margin-bottom: 2.5rem;
     align-items: center;
+}
+.campo i{
+    font-size: 2rem;
+    margin-left: 1rem;
 }
 .campo label {
     flex: 0 0 90px;
