--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ html{
 body{
     background-color: #4be776;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-image: url(../img/back.jpg);
 }
 .logotipo{
      display: flex;
@@ -134,6 +135,7 @@ p{
     margin-right: 2rem;
     font-family: var(--tabla);
     font-size: 2.5rem;
+    background-color:white;
 }
 .boton a{
     text-decoration: none;
