--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,11 @@ body{
 .usuario i{
     font-size: 2rem;
 }
+.usuario i:hover{
+    cursor: pointer;
+    background-color:darkolivegreen;
+    padding: .1rem;
+}
 .usuario img{
     margin-top: 1rem;
     border: solid;
@@ -87,6 +92,7 @@ body{
     justify-content: center;
     align-items: center;
 }
+
 .footer{
     display: flex;
     justify-content: center;
@@ -110,6 +116,7 @@ tr{
     border-style: solid;
     border-width: .5rem;
 }
+
 th, td {
     width: 20%;
     height: 2rem;
@@ -120,7 +127,14 @@ th, td {
     padding: 1rem;
     font-size: 2rem;
     background-color: #91bf91;
+    font-family: var(--tabla);
 }
+th, .fila{
+    background-color: darkslategray;
+    color: floralwhite;
+    font-family: var(--fuenteprincipal);
+}
+
 caption{
     text-align: start;
 }
