--- a/css/style.css
+++ b/css/style.css
@@ -240,3 +240,9 @@ fieldset{
     border-width: medium;
     border-style: solid;
 }
+.contenedor-solicitudes{
+width: 100rem;
+  margin: 0 auto;
+  padding: 3rem;
+  width: 100%;
+}
