Boton asignar a la derecha

--- a/css/style.css
+++ b/css/style.css
@@ -106,22 +106,18 @@ body{
 .contenedor-tabla{
     width: 80%;
     margin: 0 auto;
+    display: flex;
+    margin-right: 2rem;
 }
 table{
     width: 100%;
-    border-style: solid;
-    border-width: .4rem;
     border-collapse: collapse;
     color:#0e1a0d;
-}
-tr{
-    border-style: solid;
-    border-width: .5rem;
 }
 
 th, td {
     width: 20%;
-    height: 2rem;
+    height: 5rem;
     text-align: center;
     vertical-align: middle;
     border: .3rem solid #0e1a0d;
@@ -169,7 +165,7 @@ p{
 }
 .abajo{
     display: flex;
-    justify-content: end;
+    justify-content: center;
     margin-top: 2rem;
     margin-bottom: 1rem;
 }
@@ -245,4 +241,10 @@ width: 100rem;
   margin: 0 auto;
   padding: 3rem;
   width: 100%;
+}
+.boton-asignar {
+    background-color:transparent;
+    border: 0;
+    margin: 0;
+    text-align: left;
 }
