correccion de margenes

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,11 @@ body{
     width: 80%;
     margin: 0 auto;
     display: flex;
+}
+.contenedor-tabla-historial{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
     margin-right: 2rem;
 }
 table{
