--- a/administracion/css/style.css
+++ b/administracion/css/style.css
@@ -17,12 +17,6 @@ html{
     max-width: 120rem;
 }
 /**para controlar el footer**/
-.height{
-    margin-top:50px;
-    width:100%;
-    height:200px;
-}
-
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -247,6 +241,7 @@ html{
     color: black;
     background-color: #5f8569;
     padding: 1rem;
+    height: 100px;
 }
 .contenedor-tabla{
     width: 80%;
@@ -505,8 +500,11 @@ width: 100rem;
 }
 .proveedores{
     display: flex;
-    justify-content: space-evenly;
     margin: 2rem;
+    justify-content: space-between;
+}
+.proveedores h1{
+    margin-left: -15rem;
 }
 .boton-busq{
     margin-top: 1rem;
